welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: not found: value getCouleurrSol
	if (getCouleurrSol()==Color.GREEN) {
            ^